--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
 </head>
 <body>
+    <h1>New Potential Client (we love you)</h1>
     This is the About page
+
+    <!--This is the new form-->
 </body>
 </html>
